--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
     "styled-components": "^6.1.13",
     "tailwind-scrollbar": "^3.1.0",
     "web-vitals": "^2.1.4"
