--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "dompurify": "^3.2.3",
     "firebase": "^11.0.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
     "primereact": "^10.8.5",
     "react": "^18.3.1",
