--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://mogamalabsai:Absai2024agya@cluster0.e8o10.mongodb.net/agya?retryWrites=true&w=majority&appName=Cluster0
 SERVER_PORT= 4000
 EMAIL_HOST = "medicalservices169@gmail.com"
+CORS_ORIGIN=http://localhost:3000
