--- a/backend/package.json
+++ b/backend/package.json
@@ -14,15 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+   "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
+    "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
@@ -30,6 +32,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "python-shell": "^5.0.0"
   },
   "proxy": "https://agya-backend.vercel.app"
