--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-   "bcrypt": "^5.1.1",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "jsonwebtoken": "^9.0.2",
@@ -35,5 +35,5 @@
     "path": "^0.12.7",
     "python-shell": "^5.0.0"
   },
-  "proxy": "https://agya-backend.vercel.app"
+  "proxy": "https://agyademo.uber.space"
 }
